# fortnite-collect-bot

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  docker-publish.yml  docker-test-image.yml  lint.yml
bot/: __main__.py  changelog.py  db.py  fortnite.py  handlers.py  messages.py  news.py  roast.py  status.py
tests/: conftest.py  test_db.py  test_handlers.py  test_roast.py  test_status.py
