[project]
name = "fortnite-collect-bot"
version = "0.1.0"
description = "Telegram-бот для сбора скуада в Fortnite"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.20,<4",
    "python-dotenv>=1.1",
    "aiosqlite>=0.21",
    "openai>=2.33.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
