[project]
name = "fortnite-collect-bot"
version = "0.1.0"
description = "Telegram-бот для сбора скуада в Fortnite"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.28.2,<4",
    "python-dotenv>=1.1",
    "aiosqlite>=0.21",
    "fortnite-api>=3.3.0,<4",
    "xai-sdk>=1.12.2",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
