[project]
name = "fortnite-collect-bot"
version = "0.1.0"
description = "Telegram-бот для сбора скуада в Fortnite"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.29.0,<4",
    "python-dotenv>=1.1",
    "aiosqlite>=0.21",
    "fortnite-api>=3.3.0,<4",
    "xai-sdk>=1.17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

# aiogram <=3.28.2 caps aiohttp at <3.14, which keeps us on a version with two
# medium CVEs (CVE-2026-34993 CookieJar.load RCE, CVE-2026-47265 cross-origin
# cookie leak). Neither code path is used by this bot, but force the patched
# aiohttp 3.14.x anyway; drop this override once aiogram relaxes its pin.
[tool.uv]
override-dependencies = ["aiohttp>=3.14.0,<4"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
